fixed alignment for dashboard warning

--- a/src/styles/SplitView.scss
+++ b/src/styles/SplitView.scss
@@ -1,6 +1,6 @@
 div.warningArea {
     padding: 0.3in;
-    display: inline-block;
+    text-align: center;
 }
 
 aside.CalendarView {
